--- a/app/views/new/current/eligibility/common/business-type.html
+++ b/app/views/new/current/eligibility/common/business-type.html
@@ -34,7 +34,7 @@
                                 text: 'For example, arable or livestock farmer, fruit producer, salad grower'
                             },
                             attributes: {
-                                'data-next': 'legal-status'
+                                'data-next': '../../scoring/customers'
                             }
                         },
                         {
@@ -45,7 +45,7 @@
                                 text: 'For example, a cheese production business owned by a group of farmers'
                             },
                             attributes: {
-                                'data-next': 'legal-status'
+                                'data-next': '../../scoring/customers'
                             }
                         },
                         {
@@ -53,7 +53,7 @@
                             value: 'venison',
                             checked: true if data['business-type'] == 'venison',
                             attributes: {
-                                'data-next': 'legal-status'
+                                'data-next': '../../scoring/customers'
                             }
                         },  
                         {
