--- a/app/views/new/current/eligibility/common/legal-status.html
+++ b/app/views/new/current/eligibility/common/legal-status.html
@@ -10,7 +10,7 @@
 
         <div class="govuk-grid-column-two-thirds">
 
-            <form action="country" method="post">
+            <form action="../adding-value/items-needed" method="post">
 
                 {{ govukRadios ({
                     idPrefix: 'legal-status',
