--- a/app/views/adding-value-2024/current/start-page.html
+++ b/app/views/adding-value-2024/current/start-page.html
@@ -12,7 +12,7 @@
     <div class="govuk-grid-column-two-thirds">
 
       <h1 class="govuk-heading-xl">
-        Check if you can apply for a Farming Transformation Fund Adding Value Grant
+        Check if you can apply for an Farming Transformation Fund Adding Value Grant
       </h1>
 
       <p>
