--- a/app/views/adding-value-2024/current/start-page.html
+++ b/app/views/adding-value-2024/current/start-page.html
@@ -3,7 +3,7 @@
 {% extends 'adding-value-2024/layout.html' %}
 
 {% block pageTitle %}
-  Check if you can apply for a Farming Transformation Fund Adding Value Grant
+  Check if you can apply for an Farming Transformation Fund Adding Value Grant
 {% endblock %}
 
 {% block content %}
