--- a/app/views/new/current/start-page.html
+++ b/app/views/new/current/start-page.html
@@ -3,7 +3,7 @@
 {% extends 'new/layout.html' %}
 
 {% block pageTitle %}
-  Check if you can apply for a Adult Cattle Housing Grant
+  Check if you can apply for an Adult Cattle Housing Grant
 {% endblock %}
 
 {% block content %}
@@ -12,7 +12,7 @@
     <div class="govuk-grid-column-two-thirds">
 
       <h1 class="govuk-heading-xl">
-        Check if you can apply for a Adult Cattle Housing Grant
+        Check if you can apply for an Adult Cattle Housing Grant
       </h1>
 
       <p>
