fixed broken routing
hard coded link to by-pass broken routing on abstraction-licence.html

--- a/app/views/water/current/abstraction-licence.html
+++ b/app/views/water/current/abstraction-licence.html
@@ -20,7 +20,7 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
+      <!-- <form id="mainForm" class="form" action="{{ nextUrl }}" method="post"> -->
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
@@ -59,7 +59,7 @@
           </fieldset>
         </div>
 
-        <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button>
+        <a href="current-irrigating"><button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button></a>
 
 
     </div>
