Changes to AV calculation

--- a/app/views/adding-value-2024/current/eligibility/funding/potential-funding.html
+++ b/app/views/adding-value-2024/current/eligibility/funding/potential-funding.html
@@ -4,55 +4,54 @@
     Potential grant funding
 {% endblock %}
 
-{% if data['solar-pv'] == 'Yes' %}
+{% set maxProjectGrantAmount = 300000 %}
+{% set maxSolarGrantAmount = 100000 %}
+{% set projectGrantIsCapped = false %}
+{% set solarGrantIsCapped = false %}
 
-    {% set itemsCost = data['cost'] | float %}
+{# 1. Capture data from previous funding questions #}
+{% set hasSolar = data['solar-pv'] == 'Yes' %}
+{# [X if X else 0] makes sure we've always got a number to work with #}
+{% set projectCost = data['cost'] | float if data['cost'] else 0 %}
+
+{# 3. Calculate grant funding #}
+{% if hasSolar %}
     {% set solarCost = data['solar-pv-cost'] | float if data['solar-pv-cost'] else 0 %}
-    {% set totalCost = itemsCost + solarCost %}
+    {# 3.1. For solar scenarios #}
+    {% set grantAmount = projectCost | percent(40) %}
+    {# 3.1.1. Set grant amount to max if it exceeds max #}
+    {% if grantAmount > maxProjectGrantAmount %}
+        {% set grantAmount = maxProjectGrantAmount %}
+        {% set projectGrantIsCapped = true %}
+    {% endif %}
+    {% set solarGrantAmount = solarCost | percent(25) %}
 
-    {% set itemsGrantAmount = itemsCost | float | percent(50) %}
-    {% if itemsGrantAmount > 500000 %}
-        {% set itemsGrantAmount = 500000 %}
+    {# 3.2. Process solar grant funding cap #}
+    {% if solarGrantAmount > maxSolarGrantAmount %}
+        {% set solarGrantAmount = maxSolarGrantAmount %}
+        {% set solarGrantIsCapped = true %}
     {% endif %}
 
-    {% set solarGrantAmount = solarCost | float | percent(25) %}
-
-    {% set solarIsCapped = false %}
-
-    {% set solarCap = itemsGrantAmount %}
-
-    {% if solarCap | float > 100000 %}
-        {% set solarCap = 100000 %}
+    {% if solarGrantAmount > grantAmount %}
+        {% set solarGrantAmount = grantAmount %}
+        {% set solarGrantIsCapped = true %}
     {% endif %}
 
-    {% if solarGrantAmount | float > solarCap | float %}
-        {% set solarIsCapped = true %}
-        {% set solarGrantAmount = solarCap %}
-    {% endif %}
-
-    {% set grantAmount = itemsGrantAmount | float + solarGrantAmount | float %}
-
-    {% set solarExceedsMaxGrant = false %}
-
-    {% if grantAmount > 500000 %}
-        {% set solarIsCapped = true %}
-        {% set solarExceedsMaxGrant = true %}
-        {% set grantAmount = 500000 %}
-        {% set solarGrantAmount = 500000 - (itemsGrantAmount | float) %}
-    {% endif %}
-
-
+    {# 3.3. Calculate the totals #}
+    {% set totalCost = projectCost + solarCost %}
+    {% set totalGrantAmount = grantAmount + solarGrantAmount %}
 {% else %}
-
-    {% set totalCost = data['cost'] | float %}
-
-    {% set grantAmount = totalCost | float | percent(50) %}
-    {% if grantAmount > 500000 %}
-        {% set grantAmount = 500000 %}
+    {# 3.2. For non-solar scenarios #}
+    {# using custom filter called 'percent' to calculate grant amount #}
+    {% set grantAmount = projectCost | percent(40) %}
+    {# 3.2.1. Set grant amount to max if it exceeds max #}
+    {% if grantAmount > maxProjectGrantAmount %}
+        {% set grantAmount = maxProjectGrantAmount %}
+        {% set projectGrantIsCapped = true %}
     {% endif %}
-
-    {% set itemsGrantAmount = grantAmount | float %}
-
+    {# 3.3. Calculate the totals #}
+    {% set totalCost = projectCost %}
+    {% set totalGrantAmount = grantAmount %}
 {% endif %}
 
 {% block content %}
@@ -63,102 +62,89 @@
 
                 <form action="remaining-cost">
 
-                    <h1 class="govuk-heading-l">Potential grant funding</h1>
+                    <h1 class="govuk-heading-l">
+                        Potential grant funding
+                    </h1>
 
-                    {% if itemsGrantAmount == 500000 %}
-
+                    {% if hasSolar %}
                         <p>
-                            You may be able to apply for grant funding of up to £500,000, based on the project items cost of {{ totalCost | inPounds }}.
+                            You may be able to apply for grant funding of up to {{ totalGrantAmount | inPounds }}, based on the total estimated cost of {{ totalCost | inPounds }}.
                         </p>
-                        
                         <p>
-                            The maximum grant you can apply for is £500,000.
+                            This grant amount combines:
                         </p>
-
-                        {% if data['solar-pv'] == 'Yes' %}
-                            {{ govukInsetText ({
-                                text: 'You cannot apply for funding for a solar PV system if you have requested the maximum funding amount for project items.'
-                            }) }}
-                        {% endif %}
-
-                    {% else %}
-
-                    {% if data['solar-pv'] == 'No' %}
-                        <p>
-                            You may be able to apply for a grant of up to {{ grantAmount | inPounds }} (50% of {{ totalCost | inPounds }}).
-                        </p>
-                    {% endif %}
-
-                        {% if data['solar-pv'] == 'Yes' %}
-
-                            <p>
-                            You may be able to apply for a grant of up to {{ grantAmount | inPounds }}, based on the total estimated cost of {{ totalCost | inPounds }}.
-                            </p>
-
-                            <p>
-                                This grant amount combines:
-                            </p>
-
-                            <ul class="govuk-list govuk-list--bullet">
-                                <li>
-                                    {{ itemsGrantAmount | inPounds }} for project costs (50% of {{ itemsCost | inPounds }})
-                                </li>
-                                {% if solarIsCapped %}
-                                    <li>
-                                        {{ solarGrantAmount | inPounds }} for solar PV system costs
-                                    </li>
-                                {% else %}
-                                    <li>
-                                        {{ solarGrantAmount | inPounds }} for solar PV system costs (25% of {{ solarCost | inPounds }})
-                                    </li>
+                        <ul class="govuk-list govuk-list--bullet">
+                            <li>
+                                {{ grantAmount | inPounds }} for project costs 
+                                {% if not projectGrantIsCapped %}
+                                (40% of {{ projectCost | inPounds }})
                                 {% endif %}
-                            </ul>
+                            </li>
+                            <li>
+                                {{ solarGrantAmount | inPounds }} for solar PV system costs
+                                {% if not solarGrantIsCapped %}
+                                (25% of {{ solarCost | inPounds }})
+                                {% endif %}
+                            </li>
+                        </ul>
 
-                            {% if solarIsCapped %}
-                                
-                                {% set detailsContentHTML %}
-                                    {% if solarExceedsMaxGrant %}
+                        {% if projectGrantIsCapped or solarGrantIsCapped %}
+                        {% set detailsContentHTML %}
+                            {% if projectGrantIsCapped %}
+                                <p>
+                                    You can apply for a maximum of {{ maxProjectGrantAmount | inPounds }} for project costs.
+                                </p>
+                            {% endif %}
+                            {% if solarGrantIsCapped %}
+                                    {% if solarGrantAmount == maxSolarGrantAmount %}
                                         <p>
-                                            The maximum grant you can apply for is £500,000.
-                                        </p>
-
-                                        <p>
-                                            As project item costs take priority, you can apply for {{ solarGrantAmount | inPounds }} for solar PV system costs.
-                                        </p>
-                                    {% elif solarCap == 100000 %}
-                                        <p>
-                                            You can apply for a maximum of £100,000 for solar PV system costs.
+                                            You can apply for a maximum of {{ maxSolarGrantAmount | inPounds }} for solar PV system costs.
                                         </p>
                                     {% else %}
-
                                         <p>
                                             The grant funding for a solar PV system cannot be more than the grant funding for your project costs.
                                         </p>
-
                                         <p>
-                                            As your project grant funding is {{ itemsGrantAmount | inPounds }}, you can apply for {{ solarCap | inPounds }} for solar PV system costs.
+                                           As your project grant funding is {{ grantAmount | inPounds }}, you can apply for {{ grantAmount | inPounds }} for solar PV system costs. 
                                         </p>
                                     {% endif %}
-                                    
-                                {% endset %}
-                                
-                                {{ govukDetails({
-                                    summaryText: 'How is the solar PV system grant funding calculated?',
-                                    html: detailsContentHTML
-                                }) }}
-
                             {% endif %}
+                        {% endset %}
 
+                        {% set detailTitle = 'How is the solar PV system grant funding calculated?' %}
+
+                        {% if projectGrantIsCapped %}
+                            {% set detailTitle = 'How is the grant funding calculated?' %}
                         {% endif %}
-
+                        
+                        {{ govukDetails({
+                            summaryText: detailTitle,
+                            html: detailsContentHTML
+                        }) }}
+                        {% endif %}
+                    {% else %}
+                        <p>
+                            You may be able to apply for grant funding of up to {{ totalGrantAmount | inPounds }} 
+                            {%- if projectGrantIsCapped %}
+                                , based on the estimated cost of {{ totalCost | inPounds }}.
+                            {% else %}
+                                (40% of {{ projectCost | inPounds }}).
+                            {% endif -%}
+                        </p>
+                        {% if projectGrantIsCapped %}
+                            {{ govukInsetText ({
+                                text: 'The maximum grant you can apply for is ' + maxProjectGrantAmount | inPounds + '.'
+                            }) }}
+                        {% endif %}
                     {% endif %}
 
-                    {{ govukWarningText({
-                        text: "There's no guarantee the project will receive a grant",
-                        iconFallbackText: "Warning"
+                    {{ govukWarningText ({
+                        text: 'There’s no guarantee the project will receive a grant.',
+                        iconFallbackText: 'Warning'
                     }) }}
 
-                    <input type="hidden" name="potential-funding" value="{{ grantAmount | float }}">
+                    <input type="hidden" name="potential-funding" value="{{ totalGrantAmount }}">
+
                     <input type="hidden" name="total-cost" value="{{ totalCost | float }}">
 
                     {{ govukButton ({
@@ -167,6 +153,20 @@
 
                 </form>
 
+            </div>
+
+            <div class="govuk-grid-column-one-third">
+<!--pre>
+    Has solar: {{ hasSolar }}
+    Project cost: {{ projectCost }}
+    Solar cost: {{ solarCost }}
+    Total cost: {{ totalCost }}
+    Grant amount: {{ grantAmount }}
+    Solar grant amount: {{ solarGrantAmount }}
+    Total grant amount: {{ totalGrantAmount }}
+    Project grant is capped: {{ projectGrantIsCapped }}
+    Solar grant is capped: {{ solarGrantIsCapped }}
+</pre-->
             </div>
 
     </div>
