--- a/app/views/adding-value-2024/index.html
+++ b/app/views/adding-value-2024/index.html
@@ -61,6 +61,20 @@
             
       </div>
 
+      <div class="proto-admin">
+        <h2 class="govuk-heading-l">Design history</h2>
+        
+        
+          <p class='govuk-heading-m'>Previous versions</p>
+
+          <p class='govuk-list app-list--definition'>
+            <a href='/adding-value-2024/v2/start-page' class="govuk-link--no-visited-state">Pre-UAT</a><br>
+            Not usability tested
+            </p>
+                      
+
+      </div>
+
       </div>
       <div class="govuk-grid-column-one-third">
         <h2 class="govuk-heading-m">Page structure</h2>
