--- a/app/views/adding-value-2024/v2/eligibility/funding/elim-cost.html
+++ b/app/views/adding-value-2024/v2/eligibility/funding/elim-cost.html
@@ -8,11 +8,19 @@
 
 {% set grantAmount = data['cost'] | float | percent(50) %}
 
+{% if grantAmount > 500000 %}
+    {% set grantAmount = 500000 %}
+{% endif %}
+
 {% if grantAmount >= 20000 %}
 
     {% if data['solar-pv'] == 'Yes' %}
 
-        {{ 'solar-pv-cost' | redirect | safe }}
+        {% if grantAmount == 500000 %}
+            {{ 'potential-funding' | redirect | safe }}
+        {% else %}
+            {{ 'solar-pv-cost' | redirect | safe }}
+        {% endif %}
 
     {% else %}
     
