--- a/app/views/water-r3/index.html
+++ b/app/views/water-r3/index.html
@@ -44,13 +44,13 @@
 <!--
 <span class="govuk-caption-xl">Prototypes</span>
 -->
-<title>New proto (2024) prototype admin</title>
+<title>Water 3 prototype admin</title>
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <span class="govuk-caption-xl">Adult cattle housing core screens</span>
+      <span class="govuk-caption-xl">Water R3 core screens</span>
       <h1 class="govuk-heading-xl">
-       Adult cattle housing core screens admin
+       Water R3 core screens admin
       </h1>
 
       <div class="proto-admin">
