--- a/app/views/water-r3/index.html
+++ b/app/views/water-r3/index.html
@@ -2,7 +2,7 @@
 
 {% extends "slurry/current/views/layouts/_BASEFULL.html" %}
 
-{% set pageStructure = data.services['newproto'].structure  %}
+{% set pageStructure = data.services['water-r3'].structure  %}
 
 {% macro renderStructure(structure) %}
     <ul class="govuk-list app-file-structure">
@@ -57,7 +57,7 @@
         <h2 class="govuk-heading-l">User research</h2>
          
         <p class='govuk-list app-list--definition'>
-            <a href='/new/current/start-page' class="govuk-link--no-visited-state">Start page</a></p>
+            <a href='current/start-page' class="govuk-link--no-visited-state">Start page</a></p>
             
       </div>
 
