--- a/app/views/water-r3/layout.html
+++ b/app/views/water-r3/layout.html
@@ -9,8 +9,8 @@ https://prototype-kit.service.gov.uk/docs/how-to-use-layouts
   <!-- Blank header with no service name for the start page -->
   {{ govukHeader({
     homepageUrl: "/",
-    serviceName: "Check if you can apply for an Adult Cattle Housing Grant",
-    serviceUrl: "/new/current/start-page"
+    serviceName: "Check if you can apply for a Water Management Grant",
+    serviceUrl: "/waterr3/current/start-page"
     }) }}
 {% endblock %}
 
