new basefull layout files

--- a/app/views/water-r3/current/start-page.html
+++ b/app/views/water-r3/current/start-page.html
@@ -3,7 +3,7 @@
 {% extends 'water-r3/layout.html' %}
 
 {% block pageTitle %}
-  Check if you can apply for an Adult Cattle Housing Grant
+  Check if you can apply for a Water Management Grant
 {% endblock %}
 
 {% block content %}
