--- a/app/views/water-r3/current/eligibility/common/farming-type.html
+++ b/app/views/water-r3/current/eligibility/common/farming-type.html
@@ -1,7 +1,7 @@
 {% extends 'water-r3/layout.html' %}
 
 {% block pageTitle %}
-    Is the planned project on land the business owns?
+    What crops are you growing?
 {% endblock %}
 
 {% block content %}
@@ -10,38 +10,36 @@
 
         <div class="govuk-grid-column-two-thirds">
 
-            <form method="post">
+            <form action="legal-status" method="post">
 
                 {{ govukRadios ({
-                    idPrefix: 'tenancy',
-                    name: 'tenancy',
-                    classes: 'govuk-radios--inline',
+                    idPrefix: 'farming-type',
+                    name: 'farming-type',
                     fieldset: {
                         legend: {
-                            text: 'Is the planned project on land the business owns?',
+                            text: 'What crops are you growing?',
                             isPageHeading: true,
                             classes: 'govuk-fieldset__legend--l'
                         }
                     },
-                    hint: {
-                        text: 'The site where the work will happen'
-                    },
                     items: [
                         {
-                            text: 'Yes',
-                            value: 'Yes',
-                            checked: true if data['tenancy'] == 'Yes',
-                            attributes: {
-                                    'data-next': 'project-items'
-                                }
+                            text: 'Crops for the food industry',
+                            value: 'Crops for the food industry',
+                            checked: true if data['legal-status'] == 'Crops for the food industry'
                         },
                         {
-                            text: 'No',
-                            value: 'No',
-                            checked: true if data['tenancy'] == 'No',
+                            text: 'Horticulture',
+                            value: 'Horticulture',
+                            checked: true if data['legal-status'] == 'Horticulture'
+                        },                     
+                        {
+                            text: 'Something else',
+                            value: 'Something else',
+                            checked: true if data['legal-status'] == 'Something else',
                             attributes: {
-                                    'data-next': 'tenancy-length'
-                                }
+                                'data-next': 'elim-legal-status'
+                            }
                         }
                     ]
                 }) }}
@@ -62,7 +60,7 @@
                 <span class="app-step-nav-related__pretitle">Eligibility</span>
                 </h2>
                 <p>
-                    If you are a tenant farmer, you have the option to ask your landlord to underwrite your agreement.
+                    Public organisations and local authorities cannot apply for this grant.
                 </p>
             </div>
 
@@ -71,4 +69,3 @@
 </div>
 
 {% endblock %}
-
